# landing-app

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  docker-compose.yml  pyproject.toml
app/: Dockerfile  main.py
app/api/: __init__.py  admin.py  auth.py  landing.py
app/auth/: schemas.py  utils.py
app/core/: __init__.py  base.py  config.py  db_helper.py  exceptions.py
app/crud/: achievements.py  dao.py  sections.py  users.py
app/dependencies/: dep_auth.py
app/migrations/: env.py
app/migrations/versions/: 00c67b7a5799_initial_revision.py  2025_02_04_1451-243b31e14c9a_create_sections_achievements_images.py  2025_02_07_1915-3ee9ad7600f1_create_sections_achievements_images_.py  2025_02_09_1309-8bd458181ba1_create_sections_achievements_images_.py
app/sections/: __init__.py  models.py  schemas.py
app/static/admin/js/: admin_crud.js
app/static/landing/css/: main.css
app/static/landing/js/: main.bundle.js
app/templates/admin/: index.html
app/templates/admin/sections/: hero.html  section_01.html  section_02.html  section_03.html
app/templates/landing/: index.html
app/templates/landing/sections/: hero.html  section_01.html  section_02.html  section_03.html
app/users/: models.py
postgres-data/base/1/: 2619
postgres-data/base/16384/: 2619
postgres-data/global/: 1260  1262  2671  pg_control
postgres-data/pg_stat/: pgstat.stat
